[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/UI/Name_Area.png" type="Texture" id=1]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Prefab/NameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Prefab/Thin_Scroll.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Prefab/Arabic_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Resources/UI/Ellipse.png" type="Texture" id=6]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Prefab/NameMenu.gd" type="Script" id=8]
[ext_resource path="res://Resources/Fonts/English_T.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Resources/UI/Down_arrow.png" type="Texture" id=10]
[ext_resource path="res://Assets/Prefab/Scroll_Name_Area.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=5]
resource_name = "New_Name_Display"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Selected_Name/ArabicLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/Details/Short_Trans:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/Details/Ar-Eng:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect/Details/Ar-Eng/ColorRect:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Show"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Names_Area:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 2.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Names_Area:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 2.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect/Selected_Name:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect/Details:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="NameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.105882, 0.164706, 1 )

[node name="Selected_Name" type="TextureRect" parent="ColorRect"]
anchor_top = 0.1
anchor_bottom = 0.1
margin_right = 472.0
margin_bottom = 784.0
rect_scale = Vector2( 1.8, 1.8 )
theme = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="ArabicLabel" type="Label" parent="ColorRect/Selected_Name"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -170.0
custom_colors/font_color = Color( 0.631373, 0.854902, 0.890196, 1 )
custom_colors/font_outline_modulate = Color( 0.631373, 0.854902, 0.890196, 1 )
text = "ﻪِﻠَّﻟﭐ ﻢِﺴْﺑِ"
align = 1
valign = 1

[node name="Details" type="VBoxContainer" parent="ColorRect"]
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 1.0

[node name="Ar-Eng" type="Label" parent="ColorRect/Details"]
unique_name_in_owner = true
margin_right = 756.0
margin_bottom = 245.0
theme = ExtResource( 2 )
text = "In the Name of Allah"
align = 2
valign = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/Details/Ar-Eng"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -10.0
color = Color( 0.823529, 0.890196, 0.933333, 1 )

[node name="Short_Trans" type="Label" parent="ColorRect/Details"]
unique_name_in_owner = true
margin_top = 249.0
margin_right = 756.0
margin_bottom = 372.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.823529, 0.890196, 0.933333, 1 )
custom_colors/font_outline_modulate = Color( 0.823529, 0.890196, 0.933333, 1 )
custom_fonts/font = SubResource( 2 )
text = "the Most Compassionate, Most Merciful."
align = 2
valign = 2
autowrap = true

[node name="Names_Area" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -800.0
texture = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Names_Area"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.95
theme = ExtResource( 4 )
scroll_horizontal_enabled = false
script = ExtResource( 11 )
Names_PC = ExtResource( 3 )

[node name="Names_Contaner" type="VBoxContainer" parent="Names_Area/ScrollContainer"]
unique_name_in_owner = true
custom_constants/separation = -40
alignment = 1

[node name="Top_Arrow" type="TextureButton" parent="Names_Area"]
unique_name_in_owner = true
visible = false
anchor_left = 0.54
anchor_top = 0.03
anchor_right = 0.54
anchor_bottom = 0.03
margin_left = -14.0
margin_top = -11.0
margin_right = 130.0
margin_bottom = 45.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 14, 11 )
texture_normal = ExtResource( 10 )

[node name="Bottom_Arrow" type="TextureButton" parent="Names_Area"]
unique_name_in_owner = true
anchor_left = 0.54
anchor_top = 0.975
anchor_right = 0.54
anchor_bottom = 0.975
margin_left = -14.0
margin_top = -11.0
margin_right = 130.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 14, 11 )
texture_normal = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/New_Name_Display = SubResource( 5 )
anims/Show = SubResource( 4 )

[connection signal="button_down" from="Names_Area/Top_Arrow" to="Names_Area/ScrollContainer" method="_on_Top_Arrow_button_down"]
[connection signal="pressed" from="Names_Area/Bottom_Arrow" to="Names_Area/ScrollContainer" method="_on_Bottom_Arrow_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
